--- a/src/css/App.css
+++ b/src/css/App.css
@@ -16,7 +16,11 @@
 
 .detailsSection {
   background: lightgray;
-  margin-top: 15px;
+  margin-top: 0px;
+  padding: 7vh;
+  border-radius: 20px;
+  border: 2px solid rgb(249, 215, 28);
+  box-shadow: 0px 4px 25px 6px rgba(249, 215, 28, 0.8);
 }
 
 .container {
@@ -26,7 +30,6 @@
 
 .heading {
   color: #f9d71c;
-  background: black;
   padding: 4vh;
 }
 
@@ -45,4 +48,22 @@
 .butn:hover {
   background: lightgrey;
   text-decoration: none;
+}
+.card {
+  padding: 4vw 20vw;
+  margin: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #fb0000;
+}
+
+a:hover {
+  color: #450f01;
+}
+
+.sectionContainer {
+  border: 1px solid #f9d71c;
+  padding-bottom: 5vw;
 }
